# IRLoader

./: .gitignore  CMakeLists.txt  IRLoader.jucer
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
